# space-game

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: app_extension.rs  cli.rs  config.rs  events.rs  file_save.rs  game_mode.rs  lib.rs  main.rs  parent_child_no_rotation.rs  prelude.rs  scene.rs  settings.rs  systems.rs  utility_systems.rs
src/game/: average_velocity.rs  background.rs  camera.rs  components.rs  config.rs  debug.rs  events.rs  game_entity.rs  gamepad.rs  guard_point.rs  input.rs  mod.rs  player_camera.rs  score.rs  screen_bounds.rs  systems.rs  targets.rs  time_to_live.rs  trauma.rs  turret.rs  vitality.rs
src/game/arena/: mod.rs
src/game/assets/: groups.rs  mod.rs
src/game/boids/: components.rs  mod.rs  systems.rs
src/game/camera_movement/: keyboard_movement.rs  mod.rs
src/game/control_system/: direction_control.rs  mod.rs  thrustor.rs
src/game/enemy/: ai.rs  mod.rs
src/game/item_drop/: mod.rs
src/game/item_pickups/: component.rs  event.rs  mod.rs  systems.rs
src/game/kamikaze_drone/: components.rs  mod.rs  systems.rs
src/game/meteors/: mod.rs
src/game/movement/: follow_entity_movement.rs  (+3 more)
src/game_mode/: enemy_ship_ai.rs  main_game.rs  player_death.rs  turret_performance.rs
src/misc/: IDGenerator.rs  control.rs  despawn.rs  gizmos.rs  mod.rs  random.rs  rapier_extension.rs  sdf.rs  transform.rs
src/scene/: assets.rs  boid.rs  enemy_ship_ai.rs  kamikaze_drone.rs  main_game.rs  player_death.rs  player_movement.rs  player_vs_kamikaze_drone.rs  survival.rs  turret.rs  turret_performance.rs
src/ui/: assets.rs  hud.rs  mod.rs
(+32 files in other folders)
