[package]
name = "space-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
rand = { version = "0.8.5", features = [ "small_rng" ] }
noise = "0.8.2"
bevy_rapier2d = "0.22.0"
leafwing-input-manager = "0.10.0"